* Register new member via acp had a large gap with sidebar enabled (index.css) [Bug 3710]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8947 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/core/css/index.css
+++ b/Themes/core/css/index.css
@@ -1972,7 +1972,7 @@ fieldset.merge_options legend
 dl.register_form
 {
 	margin: 0;
-	clear: both;
+	clear: right;
 	overflow: auto;
 }
 
@@ -2006,7 +2006,6 @@ dl.register_form dd
 {
 	text-align: center;
 	padding: 1em 0;
-	clear: both;
 }
 
 .coppa_contact
