--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -2132,7 +2132,7 @@ fieldset.merge_options legend
 dl.register_form
 {
 	margin: 0;
-	clear: both;
+	clear: right;
 	overflow: auto;
 }
 
@@ -2166,7 +2166,6 @@ dl.register_form dd
 {
 	text-align: center;
 	padding: 1em 0;
-	clear: both;
 }
 
 .coppa_contact
